--- a/Project3/homework.html
+++ b/Project3/homework.html
@@ -11,7 +11,7 @@
     <div class="header-container">
         <div class="header"><h1>Глеб Гульдяшев</h1></div>
     </div>
-    <div class="picture" style="padding-top: 1080px"></div>
+    <div class="picture"></div>
     <div class="subtitle-container">
         <div class="subtitle"><h4>PERSONAL PAGE</h4></div>
     </div>
